--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".week1.CustomDialogActivity" />
         <activity android:name=".week2.ViewPagerActivity" />
+        <activity android:name=".week3.CatActivity" />
     </application>
 
 </manifest>
