--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.osori.androidstudy">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +21,12 @@
         <activity android:name=".week1.CustomDialogActivity" />
         <activity android:name=".week2.ViewPagerActivity" />
         <activity android:name=".week3.CatActivity" />
+        <activity android:name=".week4.ConstraintLayoutActivity"/>
+        <activity android:name=".week5.FloatingViewServiceActivity"/>
+
+        <service android:name=".week5.FloatingViewService"
+            android:enabled="true"
+            android:exported="false"/>
     </application>
 
 </manifest>
