--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     package="org.osori.androidstudy">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    
     <application
+        android:name=".week6.AndroidApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,7 +25,8 @@
         <activity android:name=".week3.CatActivity" />
         <activity android:name=".week4.ConstraintLayoutActivity"/>
         <activity android:name=".week5.FloatingViewServiceActivity"/>
-
+        <activity android:name=".week6.GalleryActivity"/>
+        
         <service android:name=".week5.FloatingViewService"
             android:enabled="true"
             android:exported="false"/>
